get version 13.0.1 working for Docker